# template_python_project

./: .gitignore  .pylintrc  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: master-push.yml  python-publish.yml
template_python_project/: __main__.py  main.py
template_python_project/core/: compute.py  concat.py
template_python_project/logging/: logger.py
tests/functionnal/: test_subcommand_compute.py  test_subcommand_concat.py  test_template_python_project.py
tests/unit/core/: test_compute.py  test_concat.py
