[metadata]
name = template_python_project
version = 0.3.0
author = ulphidius
url = https://github.com/ulphidius/template_python_project
description = Template test for python bin
long_description = file: README.md
long_description_content_type = text/markdown
licence = MIT

[options]
packages = find:
install_requires = 
    click == 7.1.2

[options.extras_require]
development = 
    pytest == 6.2.2

[options.entry_points]
console_scripts =
    template-python-project = template_python_project.main:main
